SOURCE/objects/VOB__c.object
<CustomObject>
    <fields>
        <fullName>Acute_detoxes_covered_under_this_plan__c</fullName>
        <inlineHelpText>Are acute detoxes covered under this plan?</inlineHelpText>
        <label>Acute detoxes covered under this plan?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>After_OOP__c</fullName>
        <label>After OOP?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Amount_Met_FOOP__c</fullName>
        <label>Amount Met $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Met_Family__c</fullName>
        <label>Amount Met $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Met_IOOP__c</fullName>
        <label>Amount Met $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Met_indi__c</fullName>
        <label>Amount Met $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Are_Free_Standing_Facilities_covered__c</fullName>
        <inlineHelpText>Are Free Standing Facilities covered?</inlineHelpText>
        <label>Are Free Standing Facilities covered?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_MH_and_SA_benefits_combined__c</fullName>
        <inlineHelpText>Are MH and SA benefits combined?</inlineHelpText>
        <label>Are MH and SA benefits combined?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_acute_detoxes_covered_under_this_pla__c</fullName>
        <inlineHelpText>Are acute detoxes covered under this plan?</inlineHelpText>
        <label>Are acute detox covered under this plan?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_sub_acute_detoxes_covered_under_this__c</fullName>
        <inlineHelpText>Are sub-acute detoxes covered under this plan?</inlineHelpText>
        <label>Are sub-acute detoxes covered under this</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VOBs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_Number__c</fullName>
        <label>Authorization Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefits_Number__c</fullName>
        <label>Benefits phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Calendar_Year_or_Plan_Year__c</fullName>
        <label>Calendar Year or Plan Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_s_Address__c</fullName>
        <label>Claim&apos;s Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_s_City__c</fullName>
        <label>Claim&apos;s City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_DOB_New__c</fullName>
        <label>Client D.O.B</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_DOB__c</fullName>
        <label>Patient DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_First_Name__c</fullName>
        <label>Patient First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Last_Name__c</fullName>
        <label>Patient Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Insurance__c</fullName>
        <label>Co-Insurance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Co_Pay__c</fullName>
        <label>Co-Pay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Detox</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>IOP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ded_does_NOT_apply_to_OOP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ded does NOT apply to OOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deductible_Met__c</fullName>
        <label>Deductible Met</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detox__c</fullName>
        <label>Detox</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Does_the_coinsurance_apply_to_the_OOP__c</fullName>
        <inlineHelpText>Does the co-insurance apply to the Out of Pocket?</inlineHelpText>
        <label>Does the co-insurance apply to the OOP??</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_deductible_apply_to_the_OOP__c</fullName>
        <inlineHelpText>Does the deductible apply to the Out of Pocket?</inlineHelpText>
        <label>Does the deductible apply to the OOP?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_outpatient_copay_apply_to_PHP__c</fullName>
        <inlineHelpText>Does the outpatient co pay apply to PHP and IOP LOC?</inlineHelpText>
        <label>Does the OP copay apply to PHP&amp;IOP LOC?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Family_Deductible__c</fullName>
        <label>Family Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Out_of_Pocket__c</fullName>
        <label>Family Out of Pocket</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>For_HCPC_H0015_is_it_a_billable_code__c</fullName>
        <label>For HCPC H0015 is it a billable code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number_New__c</fullName>
        <label>Group Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_DED_Met__c</fullName>
        <label>INN DED Met</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_DED__c</fullName>
        <label>INN DED</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_OOP_Met__c</fullName>
        <label>INN OOP Met</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_OOP__c</fullName>
        <label>INN OOP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_or_OON__c</fullName>
        <label>INN or OON</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INN</fullName>
                </value>
                <value>
                    <fullName>OON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOP__c</fullName>
        <label>IOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPR__c</fullName>
        <label>IPR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Fully_Funded_through_which_State__c</fullName>
        <label>If Fully Funded, through which State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_No_Provide__c</fullName>
        <label>If No, Provide more Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_no_is_there_a_copay_for_PHP_IOP_LOC__c</fullName>
        <inlineHelpText>If no, is there a copay for PHP and IOP LOC, separately?</inlineHelpText>
        <label>If no, is there a copay for PHP&amp;IOP LOC?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_provide_more_info__c</fullName>
        <label>If no provide more info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Deductible__c</fullName>
        <label>Individual Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_Out_of_Pocket__c</fullName>
        <label>Individual Out of Pocket</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inpatient_co_pay__c</fullName>
        <label>Inpatient co pay?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Policy_Status__c</fullName>
        <label>Insurance Policy Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Provider__c</fullName>
        <label>Entity Processing the claims?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1199 Ben &amp; Pen Plan 13162</fullName>
                </value>
                <value>
                    <fullName>Aetna - FL 60054</fullName>
                </value>
                <value>
                    <fullName>AETNA -SIGNATURE ADMINISTRATORS</fullName>
                </value>
                <value>
                    <fullName>ALICARE AMALGAMATED LIFE</fullName>
                </value>
                <value>
                    <fullName>Allegiance Benefit Plan Management INC</fullName>
                </value>
                <value>
                    <fullName>Alliance Health and Life</fullName>
                </value>
                <value>
                    <fullName>Alliant Health Plans of Georgia</fullName>
                </value>
                <value>
                    <fullName>Allied Benefits Systems</fullName>
                </value>
                <value>
                    <fullName>Allied Trades Assistance Progam</fullName>
                </value>
                <value>
                    <fullName>Ambetter of Arkansas 68069</fullName>
                </value>
                <value>
                    <fullName>AMERAPLAN</fullName>
                </value>
                <value>
                    <fullName>Ameriben</fullName>
                </value>
                <value>
                    <fullName>AmeriHealth Administrator</fullName>
                </value>
                <value>
                    <fullName>AmeriHealth HMO</fullName>
                </value>
                <value>
                    <fullName>AMERIHEALTH OF NEW JERSEY</fullName>
                </value>
                <value>
                    <fullName>ANTHEM BLUE CROSS OF CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>AUTOMATED BENEFIT SOLUTIONS FOR SMART HEATH</fullName>
                </value>
                <value>
                    <fullName>AvMed</fullName>
                </value>
                <value>
                    <fullName>BCBS - AK (Premera)</fullName>
                </value>
                <value>
                    <fullName>BCBS - AL</fullName>
                </value>
                <value>
                    <fullName>BCBS - AR</fullName>
                </value>
                <value>
                    <fullName>BCBS - AZ</fullName>
                </value>
                <value>
                    <fullName>BCBS - CO</fullName>
                </value>
                <value>
                    <fullName>BCBS - CT (Anthem)</fullName>
                </value>
                <value>
                    <fullName>BCBS - DE (Highmark)</fullName>
                </value>
                <value>
                    <fullName>BCBS - Federal</fullName>
                </value>
                <value>
                    <fullName>BCBS - FL</fullName>
                </value>
                <value>
                    <fullName>BCBS - GA</fullName>
                </value>
                <value>
                    <fullName>BCBS - IA (Wellmark)</fullName>
                </value>
                <value>
                    <fullName>BCBS - ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Provider_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Provider</label>
        <referenceTo>Payor__c</referenceTo>
        <relationshipLabel>VOBs</relationshipLabel>
        <relationshipName>VOBs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_Responsibility__c</fullName>
        <label>Insurance Responsibility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_PHP_considered_an_inpatient_benefit__c</fullName>
        <label>Is PHP considered an inpatient benefit?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_confinement__c</fullName>
        <label>Is there a confinement ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_any_HSA_on_this_plan__c</fullName>
        <inlineHelpText>Is there any HSA on this plan?</inlineHelpText>
        <label>Is there any HSA on this plan?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_any_lifetime_max__c</fullName>
        <label>Is there any lifetime max?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
                <value>
                    <fullName>limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_cobra_policy__c</fullName>
        <label>Is this a cobra policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_the_primary_insurance_policy__c</fullName>
        <label>Is this the primary insurance policy?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JCAHO_accredited_or_state_licensure__c</fullName>
        <inlineHelpText>Does the facility need to be Joint Commission accredited or is state licensure sufficient?</inlineHelpText>
        <label>JCAHO accredited or state licensure?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOC__c</fullName>
        <label>LOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Levels_of_care_is_Pre_Authorization_requ__c</fullName>
        <inlineHelpText>Levels of care is Pre-Authorization required?</inlineHelpText>
        <label>Levels of care Pre-Authorization require</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DETOX</fullName>
                </value>
                <value>
                    <fullName>RTC</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>IOP</fullName>
                </value>
                <value>
                    <fullName>All LOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <label>Medical Insurence Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1199 Ben &amp; Pen Plan 13162</fullName>
                </value>
                <value>
                    <fullName>Aetna - FL 60054</fullName>
                </value>
                <value>
                    <fullName>AETNA -SIGNATURE ADMINISTRATORS</fullName>
                </value>
                <value>
                    <fullName>ALICARE AMALGAMATED LIFE</fullName>
                </value>
                <value>
                    <fullName>Allegiance Benefit Plan Management INC</fullName>
                </value>
                <value>
                    <fullName>Alliance Health and Life</fullName>
                </value>
                <value>
                    <fullName>Alliant Health Plans of Georgia</fullName>
                </value>
                <value>
                    <fullName>Allied Benefits Systems</fullName>
                </value>
                <value>
                    <fullName>Allied Trades Assistance Progam</fullName>
                </value>
                <value>
                    <fullName>Ambetter of Arkansas 68069</fullName>
                </value>
                <value>
                    <fullName>AMERAPLAN</fullName>
                </value>
                <value>
                    <fullName>Ameriben</fullName>
                </value>
                <value>
                    <fullName>AmeriHealth Administrator</fullName>
                </value>
                <value>
                    <fullName>AmeriHealth HMO</fullName>
                </value>
                <value>
                    <fullName>AMERIHEALTH OF NEW JERSEY</fullName>
                </value>
                <value>
                    <fullName>ANTHEM BLUE CROSS OF CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>AUTOMATED BENEFIT SOLUTIONS FOR SMART HEATH</fullName>
                </value>
                <value>
                    <fullName>AvMed</fullName>
                </value>
                <value>
                    <fullName>BCBS - AK (Premera)</fullName>
                </value>
                <value>
                    <fullName>BCBS - AL</fullName>
                </value>
                <value>
                    <fullName>BCBS - AR</fullName>
                </value>
                <value>
                    <fullName>BCBS - AZ</fullName>
                </value>
                <value>
                    <fullName>BCBS - CO</fullName>
                </value>
                <value>
                    <fullName>BCBS - CT (Anthem)</fullName>
                </value>
                <value>
                    <fullName>BCBS - DE (Highmark)</fullName>
                </value>
                <value>
                    <fullName>BCBS - Federal</fullName>
                </value>
                <value>
                    <fullName>BCBS - FL</fullName>
                </value>
                <value>
                    <fullName>BCBS - GA</fullName>
                </value>
                <value>
                    <fullName>BCBS - IA (Wellmark)</fullName>
                </value>
                <value>
                    <fullName>BCBS - ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_ID_New__c</fullName>
        <label>Member ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Id__c</fullName>
        <label>Member Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Rep__c</fullName>
        <label>Name of Insurance Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_person_completing_VOB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of person completing VOB</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VOBs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_subscriber__c</fullName>
        <label>Subscriber First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Co_Insurance__c</fullName>
        <label>Co-Insurance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_DED_Met__c</fullName>
        <label>OON DED Met</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_DED__c</fullName>
        <label>OON DED</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_OOP__c</fullName>
        <label>OON OOP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOP__c</fullName>
        <label>OOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Restrictions_or_notes__c</fullName>
        <label>Other Restrictions or notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Out_of_Network_Substance_Abuse_Benefit__c</fullName>
        <label>Out of Network Substance Abuse Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outpatient_co_pay__c</fullName>
        <label>Outpatient co pay?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PHP__c</fullName>
        <label>PHP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Name_admission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When choose a patient name, demographic details and insurance details auto filled</inlineHelpText>
        <label>Patient Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>VOB</relationshipLabel>
        <relationshipName>VOBs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_Responsibility__c</fullName>
        <label>Patient Responsibility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payor_ID__c</fullName>
        <label>Payor ID</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Monthly Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_Effective_Date__c</fullName>
        <label>Policy Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Specific_Notes__c</fullName>
        <label>Policy Specific Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Policy_effective_date1__c</fullName>
        <label>Policy effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Predetermined_day_max_or_med_nessecity__c</fullName>
        <inlineHelpText>Predetermined day max or is it based on medical necessity?</inlineHelpText>
        <label>Predetermined day max or med nessecity?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Predetermined max</fullName>
                </value>
                <value>
                    <fullName>Medical nessecity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Services__c</fullName>
        <label>Provider Services</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTC__c</fullName>
        <label>RTC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reimbursement_rate__c</fullName>
        <inlineHelpText>What’s the reimbursement rate the policy pays at based on Medicare or usual and customary?</inlineHelpText>
        <label>Reimbursement rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_or_Fully_Funded__c</fullName>
        <label>Self or Fully Funded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VOB In Queue</fullName>
                    <default>true</default>
                    <label>VOB In Queue</label>
                </value>
                <value>
                    <fullName>VOB Requested</fullName>
                </value>
                <value>
                    <fullName>VOB Pending</fullName>
                </value>
                <value>
                    <fullName>VOB Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Restriction__c</fullName>
        <label>State Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>